# postech-5soat-grupo-25.github.io

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  mkdocs-gh-pages-deploy.yml
docs/: .pages  index.md
docs/fase_1/: entregavel_1.md  entregavel_2.md  entregavel_3.md  index.md
docs/fase_2/: entregavel_1.md  entregavel_2.md  entregavel_3.md
docs/fase_3/: 1_detalhes_banco_dados.md  1_terraform.md  2_banco_de_dados.md  2_infraestrutura_terraform.md  entregavel_1.md  entregavel_2.md
docs/fase_4/: arquitetura_microservicos.md  entregavel.md  entregavel_1.md
docs/fase_5/: 1_saga.md  2_lgpd.md  3_owasp.md  arquitetura_microservicos.md  entregavel_1.md  entregavel_2.md  entregavel_3.md  ripd.md
docs/hackathon/: entregavel.md  entregavel_1.md
docs/stylesheets/: extra.css
fase_1/entregavel_1/: index.html
fase_1/entregavel_2/: index.html
fase_1/entregavel_3/: index.html
fase_2/entregavel_1/: index.html
fase_2/entregavel_2/: index.html
fase_2/entregavel_3/: index.html
fase_3/1_terraform/: index.html
fase_3/2_banco_de_dados/: index.html
fase_3/entregavel_1/: index.html
fase_3/entregavel_2/: index.html
fase_4/arquitetura_microservicos/: index.html
fase_4/entregavel/: index.html
fase_5/entregavel_1/: index.html
fase_5/entregavel_2/: index.html
fase_5/entregavel_3/: index.html
hackathon/entregavel/: index.html
search/: search_index.json
stylesheets/: extra.css
